--- a/ODK.Web.Razor/Views/Shared/Payments/_PaymentSubscriptionForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Payments/_PaymentSubscriptionForm.cshtml
@@ -5,12 +5,16 @@
 @if (Model.Provider == PaymentProviderType.PayPal)
 {
     <div data-paypal-container="paypal-subscription-@Model.ExternalId"
-         data-paypal-currencycode="@Model.CurrencyCode"
-         data-paypal-type="subscription"
-         data-paypal-planid="@Model.ExternalId">
+        data-paypal-currencycode="@Model.CurrencyCode"
+        data-paypal-type="subscription"
+        data-paypal-planid="@Model.ExternalId">
     </div>
     <input data-paypal-token type="hidden" name="externalId" />
     <input type="hidden" name="siteSubscriptionPriceId" value="@Model.SiteSubscriptionPriceId" />
+}
+else if (Model.Provider == PaymentProviderType.Stripe)
+{
+    <p>STRIPE</p>
 }
 else
 {
