--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ChaptersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ChaptersContent.cshtml
@@ -1,41 +1,94 @@
 ﻿@using ODK.Services.Chapters.ViewModels
+@using ODK.Web.Common.Components
+@using ODK.Web.Razor.Models.Components
 @model SuperAdminChaptersViewModel
+@{
+    var tabs = new TabsViewModel
+    {
+        MenuItems = new[]
+        {
+            new MenuItem { Text = "Approved", Link = "#approved-tab-pane" },
+            new MenuItem { Text = "Pending", Link = "#pending-tab-pane" }
+        }
+    };
+}
 
-<h2>Pending approval</h2>
-<section class="section">
-    <div class="table-responsive">
-        <table class="table table--striped">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Created</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var chapter in Model.PendingApproval)
-                {
-                    <tr>
-                        <td>@chapter.Name</td>
-                        <td>@chapter.CreatedUtc.ToString("yyyy-MM-dd HH:mm:ss")</td>
-                        <td>
-                            <div class="button-container">
-                                <form action="/superadmin/groups/@chapter.Id/approve" method="post">
-                                    @*@Html.AntiForgeryToken()*@
-                                    <button class="btn btn-success btn-sm">Approve</button>
-                                </form>
-                                <form action="/superadmin/groups/@chapter.Id/delete" method="post">
-                                    @*@Html.AntiForgeryToken()*@
-                                    <button class="btn btn-danger btn-sm"
-                                            onclick="return confirm('Are you sure you want to delete this group?');">
-                                        Delete
-                                    </button>
-                                </form>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+<h2>Groups</h2>
+
+@await Html.PartialAsync("Components/_Tabs", tabs)
+
+<div class="tab-content">
+    @*Approved*@
+    <div class="tab-pane fade" id="approved-tab-pane" role="tabpanel" tabindex="0">
+        <section class="section">
+            <div class="table-responsive">
+                <table class="table table--striped">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Created</th>
+                            <th>Subscription</th>
+                            <th>Expires</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var chapter in Model.Approved)
+                        {
+                            <tr>
+                                <td>
+                                    <a href="/superadmin/groups/@chapter.Id">
+                                        @chapter.Name
+                                    </a>                                    
+                                </td>
+                                <td>@chapter.CreatedUtc.ToString("yyyy-MM-dd HH:mm:ss")</td>                               
+                                <td>@chapter.SiteSubscriptionName</td>
+                                <td>@chapter.SiteSubscriptionExpiresUtc?.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </section>
     </div>
-</section>            
+
+    @*Pending*@
+    <div class="tab-pane fade" id="pending-tab-pane" role="tabpanel" tabindex="0">
+        <section class="section">
+            <div class="table-responsive">
+                <table class="table table--striped">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Created</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var chapter in Model.Pending)
+                        {
+                            <tr>
+                                <td>@chapter.Name</td>
+                                <td>@chapter.CreatedUtc.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                                <td>
+                                    <div class="button-container">
+                                        <form action="/superadmin/groups/@chapter.Id/approve" method="post">
+                                            @*@Html.AntiForgeryToken()*@
+                                            <button class="btn btn-success btn-sm">Approve</button>
+                                        </form>
+                                        <form action="/superadmin/groups/@chapter.Id/delete" method="post">
+                                            @*@Html.AntiForgeryToken()*@
+                                            <button class="btn btn-danger btn-sm"
+                                                    onclick="return confirm('Are you sure you want to delete this group?');">
+                                                Delete
+                                            </button>
+                                        </form>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </div>
+</div>       
