--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviderContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviderContent.cshtml
@@ -7,6 +7,7 @@
     {
         BatchSize = Model.BatchSize,
         DailyLimit = Model.DailyLimit,
+        Name = Model.Name,
         SmtpLogin = Model.SmtpLogin,
         SmtpPassword = Model.SmtpPassword,
         SmtpPort = Model.SmtpPort,
