--- a/ODK.Web.Razor/Views/Shared/Header/_Header.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Header.cshtml
@@ -2,13 +2,17 @@
 @model HeaderViewModel
 
 <header>
-    <div class="bg-dark text-center">
-        <div class="container position-relative">
-            <a href="@Model.ImageLink">
-                <img src="@Model.ImageUrl" alt="@Model.ImageAltText" />
-            </a>
+    @if (!string.IsNullOrEmpty(Model.ImageUrl))
+    {
+        <div class="bg-dark text-center">
+            <div class="container position-relative">
+                <a href="@Model.ImageLink">
+                    <img src="@Model.ImageUrl" alt="@Model.ImageAltText" />
+                </a>
+            </div>
         </div>
-    </div>
+    }
+    
     <div>        
         @await Html.PartialAsync("Header/_Navbar", Model.Navbar)
     </div>
