--- a/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
@@ -21,7 +21,7 @@
         Events = Model.Events,
         FullWidth = true,
         Platform = Model.Platform,
-        TimeZone = Model.Chapter.TimeZone ?? TimeZoneInfo.FindSystemTimeZoneById(Chapter.DefaultTimeZoneId)
+        TimeZone = Model.Chapter.TimeZone ?? Chapter.DefaultTimeZone
     })
 }
 else
