--- a/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
@@ -17,13 +17,17 @@
             @foreach (var dto in Model.Payments.OrderByDescending(x => x.Payment.PaidUtc))
             {
                 var payment = dto.Payment;
+                if (payment.PaidUtc == null)
+                {
+                    continue;
+                }
 
                 <tr>
                     <td>
                         <a href="@OdkRoutes.Groups.Group(Model.Platform, dto.Chapter)">@dto.Chapter.Name</a>
                     </td>
                     <td>
-                        @payment.PaidUtc.ToFriendlyDateTimeString(Model.CurrentMember.TimeZone ?? dto.Chapter.TimeZone)
+                        @payment.PaidUtc.Value.ToFriendlyDateTimeString(Model.CurrentMember.TimeZone ?? dto.Chapter.TimeZone)
                     </td>
                     <td>
                         @dto.Currency.ToAmountString(payment.Amount)
